# soroban-boards

./: .gitignore  API-REFERENCE.md  Cargo.toml  DEPLOYMENT.md  FEATURES.md  README.md  deploy-local.sh  llms-full.md  package.json  pnpm-lock.yaml  render.sh  screenshot.mjs  upgrade-contracts.sh
contracts/boards-admin/: Cargo.toml
contracts/boards-admin/src/: lib.rs
contracts/boards-admin/test_snapshots/test/: test_double_init.1.json  test_init.1.json  test_render_not_found.1.json
contracts/boards-board/: Cargo.toml
contracts/boards-board/src/: lib.rs
contracts/boards-board/test_snapshots/test/: test_board_metadata_includes_slug.1.json  test_create_board_auto_generates_slug.1.json  test_create_board_with_explicit_slug.1.json  test_delete_thread.1.json  (+24 more)
contracts/boards-community/: Cargo.toml
contracts/boards-community/src/: lib.rs
contracts/boards-config/: Cargo.toml
contracts/boards-config/src/: lib.rs
contracts/boards-content/: Cargo.toml
contracts/boards-content/src/: lib.rs
contracts/boards-main/: Cargo.toml
contracts/boards-main/src/: lib.rs
contracts/boards-pages/: Cargo.toml
contracts/boards-pages/src/: lib.rs
contracts/boards-pages/test_snapshots/test/: test_create_page_not_in_nav.1.json  test_get_page_by_slug.1.json  test_init.1.json  test_list_pages_after_create.1.json
contracts/boards-permissions/: Cargo.toml
contracts/boards-permissions/src/: lib.rs
contracts/boards-registry/: Cargo.toml
contracts/boards-registry/src/: lib.rs
contracts/boards-theme/: Cargo.toml
contracts/boards-theme/src/: lib.rs
contracts/boards-voting/: Cargo.toml
contracts/boards-voting/src/: lib.rs
(+127 files in other folders)
