[workspace]
resolver = "2"

members = [
    "contracts/boards-main",
    "contracts/boards-registry",
    "contracts/boards-board",
    "contracts/boards-content",
    "contracts/boards-permissions",
    "contracts/boards-theme",
    "contracts/boards-admin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
soroban-sdk = "22.0.0"
soroban-render-sdk = { path = "/media/wyhaines/home/wyhaines/ghq/github.com/wyhaines/soroban-render-sdk" }
soroban-chonk = { git = "https://github.com/wyhaines/soroban-chonk" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
